@@ -1135,10 +1135,12 @@ $wgGroupPermissions['sysop']['markbotedits']     = true;
 $wgGroupPermissions['sysop']['suppressredirect'] = true;
 $wgGroupPermissions['sysop']['apihighlimits']    = true;
 $wgGroupPermissions['sysop']['browsearchive']    = true;
+$wgGroupPermissions['sysop']['noratelimits']     = true;
 #$wgGroupPermissions['sysop']['mergehistory']     = true;
 
 // Permission to change users' group assignments
-$wgGroupPermissions['bureaucrat']['userrights']  = true;
+$wgGroupPermissions['bureaucrat']['userrights']   = true;
+$wgGroupPermissions['bureaucrat']['noratelimits'] = true;
 // Permission to change users' groups assignments across wikis
 #$wgGroupPermissions['bureaucrat']['userrights-interwiki'] = true;
 
@@ -2835,8 +2837,11 @@ $wgRateLimitLog = null;
 
 /**
  * Array of groups which should never trigger the rate limiter
+ * 
+ * @deprecated as of 1.13, use $wgGroupPermissions[]['noratelimit']
+ * instead.
  */
-$wgRateLimitsExcludedGroups = array( 'sysop', 'bureaucrat' );
+$wgRateLimitsExcludedGroups = array();
 
 /**
  * On Special:Unusedimages, consider images "used", if they are put
